replaced CONFIG_HEXO_INTTYPES_DEPRECATED with -D_HEXO_INTTYPES_DEPRECATED

--- a/libcrypto/Makefile
+++ b/libcrypto/Makefile
@@ -1,4 +1,6 @@
 
+DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
+
 doc_headers = crypto/crypto.h crypto/arc4.h crypto/crc32.h
 
 ifeq ($(CONFIG_LIBCRYPTO_ARC4), defined)
