--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -3,6 +3,8 @@ doc_headers = mutek/mem_alloc.h mutek/page_alloc.h libc/formatter.h	\
 	mutek/printk.h mutek/rwlock.h mutek/scheduler.h mutek/timer.h	\
 	mutek/vmem_kalloc.h mutek/semaphore.h mutek/fdt.h mutek/console.h
 
+DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
+
 objs = timer.o console.o
 
 ifeq ($(CONFIG_MUTEK_MEM_REGION), defined)
