--- a/libtermui/Makefile
+++ b/libtermui/Makefile
@@ -1,4 +1,6 @@
 
+DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
+
 objs = src/term.o src/term_none.o src/term_printf.o src/term_vt100.o	\
        src/term_vt102.o src/term_xterm.o src/strings.o
 
