--- a/libtinygl/Makefile
+++ b/libtinygl/Makefile
@@ -1,3 +1,6 @@
+
+DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
+
 objs = api.o list.o vertex.o init.o matrix.o texture.o \
 	   misc.o clear.o light.o clip.o select.o get.o error.o \
 	   zbuffer.o zline.o zdither.o ztriangle.o \
