--- a/scripts/license.config
+++ b/scripts/license.config
@@ -2,11 +2,19 @@
 %config CONFIG_LICENSE_META
   desc This mandatory meta token impose requirements on application license
   flags mandatory root
-  single CONFIG_LICENSE_APP_GPL CONFIG_LICENSE_APP_GPL3 CONFIG_LICENSE_APP_LGPL CONFIG_LICENSE_APP_LGPL3 CONFIG_LICENSE_APP_BSD CONFIG_LICENSE_APP_PUBLIC CONFIG_LICENSE_APP_PROPRIETARY
+  single CONFIG_LICENSE_APP_CECILL2 CONFIG_LICENSE_APP_GPL CONFIG_LICENSE_APP_GPL3 \
+         CONFIG_LICENSE_APP_LGPL CONFIG_LICENSE_APP_LGPL3 CONFIG_LICENSE_APP_BSD \
+         CONFIG_LICENSE_APP_PUBLIC CONFIG_LICENSE_APP_PROPRIETARY
 %config end
 
 ######################################################################
 # User definable tokens
+
+%config CONFIG_LICENSE_APP_CECILL2
+  parent CONFIG_LICENSE_META
+  desc This token must be defined if application is CeCILL2 licensed
+  exclude CONFIG_LICENSE_USE_PROPRIETARY
+%config end
 
 %config CONFIG_LICENSE_APP_GPL
   parent CONFIG_LICENSE_META
@@ -23,52 +31,47 @@
 %config CONFIG_LICENSE_APP_LGPL
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is LGPL v2 licensed
-  exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_LGPL3
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is LGPL v3 licensed
-  exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_BSD
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is BSD licensed
-  exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_MIT
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is MIT licensed
-  exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_PUBLIC
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is in the public domain
-  exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_PROPRIETARY
   parent CONFIG_LICENSE_META
   desc This token must be defined if application is under a proprietary license
-  exclude CONFIG_LICENSE_USE_GPL
+  exclude CONFIG_LICENSE_USE_GPL CONFIG_LICENSE_USE_GPL3 CONFIG_LICENSE_USE_CECILL2
 %config end
 
 ######################################################################
 # Provided token, not definable by user directly
 
-%config CONFIG_LICENSE_USE_GPL
+%config CONFIG_LICENSE_USE_CECILL2
   parent CONFIG_LICENSE_META
-  desc This token will be defined if using GPLv2 licensed code in the kernel with current configuration
+  desc This token will be defined if using CeCILL2 licensed code in the kernel with current configuration
   flags meta
   exclude CONFIG_LICENSE_USE_PROPRIETARY
 %config end
 
-%config CONFIG_LICENSE_USE_CECILL2
+%config CONFIG_LICENSE_USE_GPL
   parent CONFIG_LICENSE_META
-  desc This token will be defined if using CeCILL2 licensed code in the kernel with current configuration
+  desc This token will be defined if using GPLv2 licensed code in the kernel with current configuration
   flags meta
   exclude CONFIG_LICENSE_USE_PROPRIETARY
 %config end
@@ -112,7 +115,7 @@
 
 %config CONFIG_LICENSE_USE_PROPRIETARY
   parent CONFIG_LICENSE_META
-  desc This token will be defined if using Public domain code in the kernel with current configuration
+  desc This token will be defined if using proprietary code in the kernel with current configuration
   flags meta
 %config end
 
