added CONFIG_LIBC_UNIXFD, CONFIG_LIBC_STREAM default becomes undefined, added unistd.h config_depend()

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -19,9 +19,9 @@
 %config end
 
 %config CONFIG_LIBC_STREAM
-  desc enable C library file streaming functions (fopen, fclose, ...)
+  desc Enable C library file streaming functions (get*, put*, fget*, fput*, ...).
+  desc Files access functions need Virtual File System enabled too.
   require CONFIG_LIBC_STREAM_BUFFER_SIZE
-  default defined
   parent CONFIG_LIBC
 %config end
 
@@ -32,10 +32,16 @@
   default 256
 %config end
 
+%config CONFIG_LIBC_UNIXFD
+  desc Enable C library Unix file descriptors based functions.
+  require CONFIG_LIBC_MAX_FD
+  parent CONFIG_LIBC
+%config end
+
 %config CONFIG_LIBC_MAX_FD
   desc C library maximal file descriptors count
   flags value
-  parent CONFIG_LIBC
+  parent CONFIG_LIBC_UNIXFD
   default 32
 %config end
 
