--- a/libc/Makefile
+++ b/libc/Makefile
@@ -31,8 +31,7 @@ ifeq ($(CONFIG_LIBC_FORMATTER_FLOAT), defined)
 objs += formatter_float.o
 endif
 
-doc_headers = \
-	sys/stat.h ctype.h unistd.h	\
-	semaphore.h fcntl.h errno.h stdio.h time.h stdarg.h	\
-	stddef.h stdint.h stdlib.h setjmp.h string.h assert.h limits.h \
-        libc/formatter.h
+doc_headers = alloca.h assert.h ctype.h errno.h fcntl.h limits.h        \
+	semaphore.h setjmp.h stdarg.h stdbool.h stddef.h stdint.h       \
+	stdio.h stdlib.h string.h time.h unistd.h sys/stat.h            \
+	libc/formatter.h
