--- a/doc/mkdoc.conf
+++ b/doc/mkdoc.conf
@@ -8,6 +8,8 @@
 @setopt no_cxx_classes
 @setopt show_type_keyword
 @setopt show_module_subtitle
+@setopt show_involved_macros
+@setopt show_macro_content
 @c @setopt hide_internal
 @setopt show_empty_details
 @setopt short_typedefs
@@ -16,8 +18,4 @@
 @setopt multiple_macro_def
 @setopt function_overloading {0}
 @setopt titled_refs
-
-@ifopt doc_format {latex|texinfo}
- @setopt listify_tables
-@end ifopt
 
