--- a/examples/common/platforms-ibmpc.conf
+++ b/examples/common/platforms-ibmpc.conf
@@ -9,6 +9,7 @@
   CONFIG_ARCH_HW_INIT
 
   CONFIG_IBMPC_EARLY_CONSOLE_VGA
+  CONFIG_IBMPC_EARLY_CONSOLE_E9HACK
   CONFIG_MUTEK_PRINTK_KEEP_EARLY
 
   CONFIG_DRIVER_CHAR_VGATTY
