minor config doc fix

--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -72,7 +72,7 @@
 %config end
 
 %config CONFIG_CPU_MIPS_FPU
-  desc Mips processor with a 32 bits fpu
+  desc Mips FPU register width
   flags value
   parent CONFIG_CPU_MIPS
 %config end
