--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -90,6 +90,34 @@
     CONFIG_DRIVER_TIMER_SOCLIB
   %end
 
+  %subsection pf-tutorial-numa
+    %types platform
+  
+    %notice Targetting mutekh_soclib_tutorial and mutekh_kernel_tutorial SoCLib platforms
+  
+    # Memory layout
+    CONFIG_RAM_ADDR 0x7f000000
+    CONFIG_RAM_SIZE 0x01000000
+    CONFIG_ROM_ADDR 0x60000000
+    CONFIG_ROM_SIZE 0x00100000
+
+    CONFIG_MUTEK_PRINTK_KEEP_EARLY
+    CONFIG_SOCLIB_EARLY_CONSOLE
+    CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
+    %append MODULES pf_def:$(CONFIGPATH)
+    %set platform_name pf_soclib_tutorial
+
+    CONFIG_MUTEK_MEM_REGION
+    CONFIG_MUTEK_MEM_REGION_AUTO_INIT undefined
+
+    # Device and drivers
+    CONFIG_DRIVER_CHAR_SOCLIBTTY
+    CONFIG_DRIVER_ICU_SOCLIB
+    CONFIG_DRIVER_ICU_SOCLIB_XICU
+    CONFIG_DRIVER_BLOCK_SOCLIB
+    CONFIG_DRIVER_TIMER_SOCLIB
+  %end
+
   # Heterogeneous SoCLib platform
 
   %subsection pf-het
