added experimental sparc v8 processor support

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -58,6 +58,13 @@
     %set BUILD_NAME soclib-nios
   %end
 
+  %subsection soclib-sparc
+    %types cpu
+  
+    CONFIG_CPU_SPARC_SOCLIB
+    %set BUILD_NAME soclib-sparc
+  %end
+
   #################################################
   # platforms
 
