added sparc irq support

--- a/drivers/icu/Makefile
+++ b/drivers/icu/Makefile
@@ -19,6 +19,10 @@ ifeq ($(CONFIG_DRIVER_ICU_MIPS), defined)
  subdirs += mips
 endif
 
+ifeq ($(CONFIG_DRIVER_ICU_SPARC), defined)
+ subdirs += sparc
+endif
+
 ifeq ($(CONFIG_DRIVER_ICU_PPC), defined)
  subdirs += ppc
 endif
