added experimental LatticeMico32 (lm32) processor support

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -65,6 +65,13 @@
     %set BUILD_NAME soclib-sparc
   %end
 
+  %subsection soclib-lm32
+    %types cpu
+  
+    CONFIG_CPU_LM32_SOCLIB
+    %set BUILD_NAME soclib-lm32
+  %end
+
   #################################################
   # platforms
 
