cpu/ config.mk files cleanup

--- a/cpu/lm32/lm32.config
+++ b/cpu/lm32/lm32.config
@@ -28,5 +28,38 @@
   provide CONFIG_HEXO_STACK_ALIGN=4
   provide CONFIG_CPU_ARCHNAME=lm32
   require CONFIG_HEXO_STACK_ALIGN>=4
+
+  exclude CONFIG_HEXO_USERMODE
+  exclude CONFIG_HEXO_FPU
 %config end
 
+%config CONFIG_CPU_LM32_BARREL_SHIFT
+  parent CONFIG_CPU_LM32
+  desc Use lm32 processor with barrel shifter instructions enabled
+  default defined
+%config end
+
+%config CONFIG_CPU_LM32_DIVIDE
+  parent CONFIG_CPU_LM32
+  desc Generate code for lm32 processor with divide instructions enabled
+  when CONFIG_CPU_LM32_SOCLIB
+%config end
+
+%config CONFIG_CPU_LM32_MULTIPLY
+  parent CONFIG_CPU_LM32
+  desc Generate code for lm32 processor with multiply instructions enabled
+  when CONFIG_CPU_LM32_SOCLIB
+%config end
+
+%config CONFIG_CPU_LM32_SIGN_EXTEND
+  parent CONFIG_CPU_LM32
+  desc Generate code for lm32 processor with sign extension instructions enabled
+  when CONFIG_CPU_LM32_SOCLIB
+%config end
+
+%config CONFIG_CPU_LM32_IRQ_COUNT
+  parent CONFIG_CPU_LM32
+  flags value
+  desc Lm32 processor irq lines count
+  default 1
+%config end
