--- a/cpu/nios/nios.config
+++ b/cpu/nios/nios.config
@@ -34,3 +34,20 @@
   exclude CONFIG_HEXO_FPU
 %config end
 
+%config CONFIG_CPU_NIOS_MUL
+  parent CONFIG_CPU_NIOS
+  desc Generate code for Nios2 processor mul instructions
+  when CONFIG_CPU_NIOS_SOCLIB
+%config end
+
+%config CONFIG_CPU_NIOS_MULX
+  parent CONFIG_CPU_NIOS
+  desc Generate code for Nios2 processor mulx instructions
+%config end
+
+%config CONFIG_CPU_NIOS_DIV
+  parent CONFIG_CPU_NIOS
+  desc Generate code for Nios2 processor div instructions
+  when CONFIG_CPU_NIOS_SOCLIB
+%config end
+
