--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -51,11 +51,11 @@
     %set BUILD_NAME soclib-ppc
   %end
 
-  %subsection soclib-nios soclib-nios2
+  %subsection soclib-nios2
     %types cpu
 
-    CONFIG_CPU_NIOS_SOCLIB
-    %set BUILD_NAME soclib-nios
+    CONFIG_CPU_NIOS2_SOCLIB
+    %set BUILD_NAME soclib-nios2
   %end
 
   %subsection soclib-sparc
