--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -98,7 +98,7 @@
   flags	mandatory internal root
   require CONFIG_CPU_NAME
   require CONFIG_CPU_ARCHNAME
-  single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC CONFIG_CPU_NIOS CONFIG_CPU_SPARC CONFIG_CPU_LM32
+  single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC CONFIG_CPU_NIOS2 CONFIG_CPU_SPARC CONFIG_CPU_LM32
   single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
   require CONFIG_CPU_MAXCOUNT>0
 %config end
