--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -2,9 +2,9 @@
 ######################################################################
 # User definable tokens
 
-%config CONFIG_CPU_NIOS_SOCLIB
-  desc SoCLib NiosII
-  parent CONFIG_CPU_NIOS
+%config CONFIG_CPU_NIOS2_SOCLIB
+  desc SoCLib Nios2 processor support
+  parent CONFIG_CPU_NIOS2
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
@@ -16,15 +16,15 @@
 ######################################################################
 # Provided tokens, not definable by user directly
 
-%config CONFIG_CPU_NIOS
-  desc NiosII processor support
+%config CONFIG_CPU_NIOS2
+  desc Nios2 processor support
   parent CONFIG_CPU_META
   flags internal private
   
-  when CONFIG_CPU_NIOS_SOCLIB
+  when CONFIG_CPU_NIOS2_SOCLIB
 
   module cpu Hexo
-  provide CONFIG_CPU_ARCHNAME=nios
+  provide CONFIG_CPU_ARCHNAME=nios2
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_RESET_ADDR=0x00802000
   provide CONFIG_CPU_RESET_SIZE=0x1000
@@ -34,20 +34,20 @@
   exclude CONFIG_HEXO_FPU
 %config end
 
-%config CONFIG_CPU_NIOS_MUL
-  parent CONFIG_CPU_NIOS
+%config CONFIG_CPU_NIOS2_MUL
+  parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor mul instructions
-  when CONFIG_CPU_NIOS_SOCLIB
+  when CONFIG_CPU_NIOS2_SOCLIB
 %config end
 
-%config CONFIG_CPU_NIOS_MULX
-  parent CONFIG_CPU_NIOS
+%config CONFIG_CPU_NIOS2_MULX
+  parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor mulx instructions
 %config end
 
-%config CONFIG_CPU_NIOS_DIV
-  parent CONFIG_CPU_NIOS
+%config CONFIG_CPU_NIOS2_DIV
+  parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor div instructions
-  when CONFIG_CPU_NIOS_SOCLIB
+  when CONFIG_CPU_NIOS2_SOCLIB
 %config end
 
