--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -78,8 +78,16 @@
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
-  desc Mips processor version (1, 2, 3, 4, 32, 322, 64)
+  desc Mips processor ISA version:
+  desc r2000 r3000 (1), r6000 (2), r4000 (3),
+  desc r5000 (4), r8000 (4), r10000 (4), mips32 (32), mips32r2 (322), mips64 (64)
   flags value internal private
   parent CONFIG_CPU_MIPS
+%config end
+
+%config CONFIG_CPU_MIPS_USE_ERET
+  parent CONFIG_CPU_MIPS
+  desc Mips processor use eret instruction instead of rfe
+  when CONFIG_CPU_MIPS_VERSION>2
 %config end
 
