added sparc preempt support

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -63,6 +63,10 @@
   
     CONFIG_CPU_SPARC_SOCLIB
     %set BUILD_NAME soclib-sparc
+
+    %subsection 2wins
+      CONFIG_CPU_SPARC_WINCOUNT 2
+    %end
   %end
 
   %subsection soclib-lm32
