added sparc user mode support

--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -35,6 +35,13 @@
   default 8
 %config end
 
+%config CONFIG_CPU_SPARC_APP_REGS
+  desc Compiler can use sparc g2, g3 and g4 registers as temporary when enabled.
+  desc Makes irq and context switch faster when disabled but needs libgcc compiled accordingly.
+  parent CONFIG_CPU_SPARC
+  default defined
+%config end
+
 %config CONFIG_CPU_SPARC
   desc Sparc processors support
   parent CONFIG_CPU_META
