added CONFIG_COMPILE_MARCH and CONFIG_COMPILE_MCPU

--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -10,6 +10,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_NAME=sparcv8
+  provide CONFIG_COMPILE_MCPU=v8
 #  provide CONFIG_CPU_SMP_CAPABLE
 #  provide CONFIG_CPU_WAIT_IRQ
 #  depend CONFIG_COMPILE_SOFTFLOAT
@@ -22,6 +23,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=sparcv8_leon3
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_COMPILE_MCPU=v8
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
