--- a/scripts/global.config
+++ b/scripts/global.config
@@ -45,6 +45,16 @@
   desc Add instrumentation calls for entry and exit to functions
 %config end
 
+%config CONFIG_COMPILE_MCPU
+  flags value root
+  desc Specify gcc -mcpu value to use
+%config end
+
+%config CONFIG_COMPILE_MARCH
+  flags value root
+  desc Specify gcc -march value to use
+%config end
+
 %config CONFIG_DEBUG
   flags root
   desc Enable debug features globaly
