--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -14,6 +14,7 @@
   provide CONFIG_CPU_PPC_WAIT_MSRWE
 #  depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_NAME=ppc405
+  provide CONFIG_COMPILE_MCPU=405
 %config end
 
 
