--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -9,6 +9,13 @@
   parent CONFIG_ARCH_SIMPLE
 %config end
 
+%config CONFIG_ARCH_SIMPLE_VIRTEX4
+  desc Microblaze Virtex4 based microcontroller
+  provide CONFIG_ARCH_SIMPLE_RESET_ADDR=0
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+#  provide CONFIG_ARCH_SIMPLE_HW_INIT
+  parent CONFIG_ARCH_SIMPLE
+%config end
 ######################################################################
 # Provided token, not definable by user directly
 
@@ -19,6 +26,7 @@
   parent CONFIG_ARCH_META
 
   when CONFIG_ARCH_SIMPLE_SAM7
+  when CONFIG_ARCH_SIMPLE_VIRTEX4
 
   provide CONFIG_ARCH_NAME=simple
   require CONFIG_ARCH_SIMPLE_RESET_ADDR
