sparc cpu minor fixes

--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -11,6 +11,7 @@
   provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_NAME=sparcv8
   provide CONFIG_COMPILE_MCPU=v8
+  provide CONFIG_CPU_RESET_ADDR=0x00000000
 #  provide CONFIG_CPU_SMP_CAPABLE
 #  provide CONFIG_CPU_WAIT_IRQ
 #  depend CONFIG_COMPILE_SOFTFLOAT
@@ -21,6 +22,7 @@
   flags harddep
   parent CONFIG_CPU_SPARC
   provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_NAME=sparcv8_leon3
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_COMPILE_MCPU=v8
@@ -50,11 +52,10 @@
   flags internal private
 
   when CONFIG_CPU_SPARC_SOCLIB
+  when CONFIG_CPU_SPARC_LEON3
 
   module cpu Hexo
-  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_NAME=sparc
-  provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=4096
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_EXCEPTION_FIXED_ADDRESS=0x0
