--- a/arch/arch.config
+++ b/arch/arch.config
@@ -20,7 +20,7 @@
   desc meta configuration token used to impose requirements
   flags	mandatory internal root
   require CONFIG_ARCH_NAME
-  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE
+  single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE CONFIG_ARCH_GAISLER
   single CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
   depend CONFIG_ARCH_BOOTLOADER CONFIG_CPU_RESET_HANDLER
 %config end
