--- a/examples/common/platforms.conf
+++ b/examples/common/platforms.conf
@@ -2,6 +2,7 @@
 %include ./platforms-simple.conf
 %include ./platforms-ibmpc.conf
 %include ./platforms-soclib.conf
+%include ./platforms-gaisler.conf
 %include ./platforms-bootloaded.conf
 
 %common
