added experimental vfs driver for soclib fdaccess

--- a/libvfs/fs/Makefile
+++ b/libvfs/fs/Makefile
@@ -13,3 +13,8 @@ endif
 ifeq ($(CONFIG_DRIVER_FS_DEVFS), defined)
  subdirs += devfs
 endif
+
+ifeq ($(CONFIG_DRIVER_FS_SOCLIB_FDACCESS), defined)
+ subdirs += soclib-fdaccess
+endif
+
