rewrote device/*.h to add support for: multiple driver APIs per device, endpoint based irq handling and irq topology, device resources table, user defined driver classes. Breaks all existing drivers

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -94,7 +94,7 @@
     CONFIG_ROM_ADDR 0x60000000
     CONFIG_ROM_SIZE 0x00100000
 
-    CONFIG_MUTEK_PRINTK_KEEP_EARLY
+#    CONFIG_MUTEK_PRINTK_KEEP_EARLY
     CONFIG_SOCLIB_EARLY_CONSOLE
     CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
     %append MODULES pf_def:$(CONFIGPATH)
@@ -119,7 +119,7 @@
     CONFIG_ROM_ADDR 0x60000000
     CONFIG_ROM_SIZE 0x00100000
 
-    CONFIG_MUTEK_PRINTK_KEEP_EARLY
+#    CONFIG_MUTEK_PRINTK_KEEP_EARLY
     CONFIG_SOCLIB_EARLY_CONSOLE
     CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
     %append MODULES pf_def:$(CONFIGPATH)
