added device tree dump function

--- a/drivers/char/tty-soclib/tty-soclib.config
+++ b/drivers/char/tty-soclib/tty-soclib.config
@@ -1,6 +1,6 @@
 
 %config CONFIG_DRIVER_CHAR_SOCLIBTTY
-  desc enable soclib TTY device support
+  desc enable SoCLib TTY driver
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
