--- a/examples/getline/config
+++ b/examples/getline/config
@@ -13,5 +13,13 @@
 %include $(SRC_DIR)/examples/common/build_options.conf
 %include $(SRC_DIR)/examples/common/platforms.conf
 
-  CONFIG_ARCH_SMP undefined
   CONFIG_CPU_MAXCOUNT 1
+
+  CONFIG_HEXO_IRQ defined
+CONFIG_DRIVER_BLOCK_SOCLIB undefined
+CONFIG_DRIVER_ICU_MIPS defined
+CONFIG_DRIVER_TIMER_SOCLIB undefined
+CONFIG_DRIVER_ICU_SOCLIB undefined
+CONFIG_DRIVER_ICU_SOCLIB_XICU undefined
+
+  CONFIG_ARCH_SMP undefined
