rewrote xicu driver for new irq API, added irq call graph optimization based on irq topology

--- a/drivers/block/sd-mmc/sd-mmc.config
+++ b/drivers/block/sd-mmc/sd-mmc.config
@@ -3,6 +3,6 @@
   desc enable SD/MMC block device support
   depend CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_BLOCK
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
