--- a/drivers/block/soclib/block-soclib.config
+++ b/drivers/block/soclib/block-soclib.config
@@ -4,6 +4,6 @@
   depend CONFIG_HEXO_IRQ
   depend CONFIG_ARCH_SOCLIB
   depend CONFIG_DEVICE_BLOCK
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
