--- a/drivers/char/dbgu-sam7/dbgu-sam7.config
+++ b/drivers/char/dbgu-sam7/dbgu-sam7.config
@@ -3,6 +3,6 @@
   desc enable Sam7 DBGU device support
   depend CONFIG_ARCH_SIMPLE_SAM7
   depend CONFIG_DEVICE_CHAR
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
