--- a/drivers/char/gaisler-apbuart/gaisler-apbuart.config
+++ b/drivers/char/gaisler-apbuart/gaisler-apbuart.config
@@ -3,6 +3,6 @@
   desc enable Gaisler APB UART device support
   depend CONFIG_ARCH_GAISLER
   depend CONFIG_DEVICE_CHAR
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
