--- a/drivers/char/tty-emu/tty-emu.config
+++ b/drivers/char/tty-emu/tty-emu.config
@@ -3,5 +3,5 @@
   desc enable emulation TTY for Linux
   depend CONFIG_ARCH_EMU
   depend CONFIG_DEVICE_CHAR
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
