--- a/drivers/char/tty-soclib/tty-soclib.config
+++ b/drivers/char/tty-soclib/tty-soclib.config
@@ -3,6 +3,6 @@
   desc enable SoCLib TTY driver
   depend CONFIG_ARCH_SOCLIB
   depend CONFIG_DEVICE_CHAR
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
