--- a/drivers/char/tty-vga/tty-vga.config
+++ b/drivers/char/tty-vga/tty-vga.config
@@ -4,7 +4,7 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_CHAR
   exclude CONFIG_DRIVER_FB_VGA
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
 %config CONFIG_DRIVER_CHAR_VGATTY_ANSI
