--- a/drivers/char/uart-8250/uart-8250.config
+++ b/drivers/char/uart-8250/uart-8250.config
@@ -3,6 +3,6 @@
   desc enable intel 8250 uart device support
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_CHAR
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
