--- a/drivers/enum/fdt/enum-fdt.config
+++ b/drivers/enum/fdt/enum-fdt.config
@@ -5,6 +5,6 @@
   depend CONFIG_DEVICE_ENUM
   depend CONFIG_FDT
   depend CONFIG_DEVICE_TREE
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
