--- a/drivers/enum/root/enum-root.config
+++ b/drivers/enum/root/enum-root.config
@@ -4,6 +4,6 @@
   flags auto
   depend CONFIG_DEVICE_TREE
   depend CONFIG_DEVICE_ENUM
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
