--- a/drivers/fb/vga/fb-vga.config
+++ b/drivers/fb/vga/fb-vga.config
@@ -3,7 +3,7 @@
   desc enable vga frame buffer device support
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_FB
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 
 # based on code from svgalib
   depend CONFIG_LICENSE_USE_BSD
