--- a/drivers/icu/8259/icu-8259.config
+++ b/drivers/icu/8259/icu-8259.config
@@ -4,7 +4,7 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   exclude CONFIG_DRIVER_ICU_APIC_IOAPIC
 %config end
 
