--- a/drivers/icu/apic/icu-apic.config
+++ b/drivers/icu/apic/icu-apic.config
@@ -8,7 +8,7 @@
   # use SMP without IRQs as APIC is used to start processors
   depend CONFIG_DEVICE_ICU
   depend CONFIG_HEXO_IPI
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
 %config CONFIG_DRIVER_ICU_APIC_IOAPIC
