--- a/drivers/icu/arm/icu-arm.config
+++ b/drivers/icu/arm/icu-arm.config
@@ -4,6 +4,6 @@
   when CONFIG_CPU_ARM
   depend CONFIG_DEVICE_ICU
   depend CONFIG_HEXO_IRQ
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
