--- a/drivers/icu/emu/icu-emu.config
+++ b/drivers/icu/emu/icu-emu.config
@@ -6,6 +6,6 @@
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
   depend CONFIG_HEXO_IPI
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
