--- a/drivers/icu/nios2/icu-nios2.config
+++ b/drivers/icu/nios2/icu-nios2.config
@@ -4,5 +4,5 @@
   when CONFIG_CPU_NIOS2
   depend CONFIG_DEVICE_ICU
   depend CONFIG_HEXO_IRQ
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
