--- a/drivers/icu/sam7/icu-sam7.config
+++ b/drivers/icu/sam7/icu-sam7.config
@@ -5,6 +5,6 @@
   depend CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
