--- a/drivers/icu/soclib-xicu/xicu.config
+++ b/drivers/icu/soclib-xicu/xicu.config
@@ -1,11 +1,9 @@
 
 %config CONFIG_DRIVER_ICU_SOCLIB_XICU
-  desc enable Xicu SocLib interrupt controller unit support
-  when CONFIG_ARCH_SOCLIB CONFIG_ARCH_SMP CONFIG_HEXO_IPI
+  desc Enable SocLib Xicu interrupt controller support
   depend CONFIG_ARCH_SOCLIB
-  depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
-  depend CONFIG_HEXO_IPI
-  parent CONFIG_DEVICE
+#  depend CONFIG_DEVICE_TIMER
+  parent CONFIG_DRIVER
 %config end
 
