--- a/drivers/input/mt5-f/mt5-f.config
+++ b/drivers/input/mt5-f/mt5-f.config
@@ -3,6 +3,6 @@
   desc Enable MT5F 4-way + button joystick
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_INPUT
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
