--- a/drivers/lcd/pcf8833/pcf8833.config
+++ b/drivers/lcd/pcf8833/pcf8833.config
@@ -3,6 +3,6 @@
   desc Enable Philips PCF8833 SPI LCD driver
   depend CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_LCD
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
