--- a/drivers/lcd/s1d15g00/s1d15g00.config
+++ b/drivers/lcd/s1d15g00/s1d15g00.config
@@ -4,6 +4,6 @@
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_LCD
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
