--- a/drivers/net/ne2000/net-ne2000.config
+++ b/drivers/net/ne2000/net-ne2000.config
@@ -5,7 +5,7 @@
   depend CONFIG_NETWORK
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_NET
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
 %config CONFIG_DRIVER_NET_NE2000_FRAGMENT
