--- a/drivers/net/tuntap/net-tuntap.config
+++ b/drivers/net/tuntap/net-tuntap.config
@@ -4,5 +4,5 @@
   depend CONFIG_NETWORK
   depend CONFIG_ARCH_EMU
   depend CONFIG_DEVICE_NET
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
