--- a/drivers/spi/oc_spi_controller/spi-oc_spi_controller.config
+++ b/drivers/spi/oc_spi_controller/spi-oc_spi_controller.config
@@ -2,6 +2,6 @@
 %config CONFIG_DRIVER_SPI_OPENCORES
   desc Enable OpenCores SPI Controller
   depend CONFIG_DEVICE_SPI
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
