--- a/drivers/spi/spi6088d/spi-spi6088d.config
+++ b/drivers/spi/spi6088d/spi-spi6088d.config
@@ -2,6 +2,6 @@
 %config CONFIG_DRIVER_SPI_SPI6088D
   desc Enable Atmel API 6088D device support (SAMx, ...)
   depend CONFIG_DEVICE_SPI
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
