--- a/drivers/timer/8253/timer-8253.config
+++ b/drivers/timer/8253/timer-8253.config
@@ -4,6 +4,6 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_TIMER
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
