--- a/drivers/timer/emu/timer-emu.config
+++ b/drivers/timer/emu/timer-emu.config
@@ -3,6 +3,6 @@
   desc enable timer emulation for Linux
   depend CONFIG_ARCH_EMU
   depend CONFIG_DEVICE_TIMER
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
