--- a/examples/getline/config
+++ b/examples/getline/config
@@ -20,6 +20,6 @@ CONFIG_DRIVER_BLOCK_SOCLIB undefined
 CONFIG_DRIVER_ICU_MIPS defined
 CONFIG_DRIVER_TIMER_SOCLIB undefined
 CONFIG_DRIVER_ICU_SOCLIB undefined
-CONFIG_DRIVER_ICU_SOCLIB_XICU undefined
+CONFIG_DRIVER_ICU_SOCLIB_XICU defined
 
   CONFIG_ARCH_SMP undefined
