--- a/drivers/block/ata/block-ata.config
+++ b/drivers/block/ata/block-ata.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_BLOCK_ATA
   desc enable ATA block device support
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_BLOCK
   depend CONFIG_DEVICE_TIMER
