--- a/drivers/block/file-emu/block-file-emu.config
+++ b/drivers/block/file-emu/block-file-emu.config
@@ -3,7 +3,7 @@
   desc enable emu block device support
   require CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
   depend CONFIG_DEVICE_BLOCK
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
 %config CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
