--- a/drivers/block/partition/block-partition.config
+++ b/drivers/block/partition/block-partition.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_BLOCK_PARTITION
   desc enable partition block device support
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   require CONFIG_DRIVER_BLOCK_PARTITION_MAXCOUNT
 %config end
 
