--- a/drivers/block/ramdisk/block-ramdisk.config
+++ b/drivers/block/ramdisk/block-ramdisk.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_BLOCK_RAMDISK
   desc enable ramdisk block device support
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   depend CONFIG_DEVICE_BLOCK
   require CONFIG_DRIVER_BLOCK_RAMDISK_SIZE
   require CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
