--- a/drivers/char/random/random.config
+++ b/drivers/char/random/random.config
@@ -3,7 +3,7 @@
   depend CONFIG_LIBCRYPTO
   depend CONFIG_LIBCRYPTO_ARC4
   desc enable random stream generator pseudo device
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   depend CONFIG_DEVICE_CHAR
 %config end
 
