--- a/drivers/char/zero/zero.config
+++ b/drivers/char/zero/zero.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_ZERO
   desc enable Zero char pseudo device, read zeros, eat everything on write
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
   depend CONFIG_DEVICE_CHAR
 %config end
 
