--- a/drivers/enum/pci/enum-pci.config
+++ b/drivers/enum/pci/enum-pci.config
@@ -4,6 +4,6 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_TREE
   depend CONFIG_DEVICE_ENUM
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
