--- a/drivers/fb/soclib/fb-soclib.config
+++ b/drivers/fb/soclib/fb-soclib.config
@@ -3,6 +3,6 @@
   desc enable soclib frame buffer device support
   depend CONFIG_ARCH_SOCLIB
   depend CONFIG_DEVICE_FB
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
