--- a/drivers/gpio/sam7/gpio-sam7.config
+++ b/drivers/gpio/sam7/gpio-sam7.config
@@ -3,6 +3,6 @@
   desc Enable Sam7 PIO controller support
   depend CONFIG_ARCH_SIMPLE_SAM7
   depend CONFIG_DEVICE_GPIO
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
