--- a/drivers/icu/soclib-icu/icu-soclib.config
+++ b/drivers/icu/soclib-icu/icu-soclib.config
@@ -4,6 +4,6 @@
   depend CONFIG_ARCH_SOCLIB
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_ICU
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
