--- a/drivers/input/8042/input-8042.config
+++ b/drivers/input/8042/input-8042.config
@@ -4,6 +4,6 @@
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_INPUT
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
