--- a/drivers/mem/memory/memory.config
+++ b/drivers/mem/memory/memory.config
@@ -3,6 +3,6 @@
   desc Enable memory as device (useful for parsing a device tree)
   when CONFIG_FDT
   depend CONFIG_DEVICE_MEM
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
