--- a/drivers/timer/pitc_6079a/pitc_6079a.config
+++ b/drivers/timer/pitc_6079a/pitc_6079a.config
@@ -3,6 +3,6 @@
   desc Enable Atmen PITC 6079A timer device support (Sam7, ...)
   depend CONFIG_HEXO_IRQ
   depend CONFIG_DEVICE_TIMER
-  parent CONFIG_DEVICE
+  parent CONFIG_DRIVER
 %config end
 
