fixed Gaisler APBUART driver for new API, added AHBCTRL and APBCTRL bridges pnp enumerator drivers

--- a/arch/gaisler/drivers/Makefile
+++ b/arch/gaisler/drivers/Makefile
@@ -1,3 +1,13 @@
 
-subdirs = apbuart
+ifeq ($(CONFIG_DRIVER_GAISLER_APBUART), defined)
+subdirs += apbuart
+endif
+
+ifeq ($(CONFIG_DRIVER_GAISLER_AHBCTRL), defined)
+subdirs += ahbctrl
+endif
+
+ifeq ($(CONFIG_DRIVER_GAISLER_APBCTRL), defined)
+subdirs += apbctrl
+endif
 
