added default irq controller support, added Gaisler IRQMP driver

--- a/arch/gaisler/drivers/Makefile
+++ b/arch/gaisler/drivers/Makefile
@@ -11,3 +11,7 @@ ifeq ($(CONFIG_DRIVER_GAISLER_APBCTRL), defined)
 subdirs += apbctrl
 endif
 
+ifeq ($(CONFIG_DRIVER_GAISLER_IRQMP), defined)
+subdirs += irqmp
+endif
+
