--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -26,6 +26,7 @@
   provide CONFIG_CPU_NAME=sparcv8_leon3
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_COMPILE_MCPU=v8
+  provide CONFIG_CPU_SPARC_SINGLE_IRQ_EP
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
@@ -52,6 +53,12 @@
   desc Makes irq and context switch faster when disabled but needs libgcc compiled accordingly.
   parent CONFIG_CPU_SPARC
   default defined
+%config end
+
+%config CONFIG_CPU_SPARC_SINGLE_IRQ_EP
+  desc Specify if the sparc processor have seperate irq lines or if it use a single irq end-point to multiplex irqs.
+  parent CONFIG_CPU_SPARC
+  flags meta
 %config end
 
 %config CONFIG_CPU_SPARC
