added device CPU flag, added device/driver bind and init functions, various FIXME fixes

--- a/examples/common/pf_soclib_tutorial.dts
+++ b/examples/common/pf_soclib_tutorial.dts
@@ -10,7 +10,7 @@
 		#size-cells = <0>;
 
 		cpu@0 {
-                        compatible = "cpu:mips";
+                        compatible = "cpu:sparc";
 			reg = <0>;
                         interrupt-controller;
 		};
