--- a/examples/common/platforms-gaisler.conf
+++ b/examples/common/platforms-gaisler.conf
@@ -21,10 +21,16 @@
   CONFIG_MUTEK_PRINTK_KEEP_EARLY
   CONFIG_GAISLER_EARLY_CONSOLE
   CONFIG_GAISLER_EARLY_CONSOLE_ADDR 0x80000100
+  CONFIG_GAISLER_EARLY_CONSOLE_DEBUG
 
   CONFIG_CPU_RESET_HANDLER
 
     # Device and drivers
+
+  CONFIG_DRIVER_GAISLER_APBUART
+  CONFIG_DRIVER_GAISLER_AHBCTRL
+  CONFIG_DRIVER_GAISLER_APBCTRL
+  CONFIG_DRIVER_GAISLER_IRQMP
 
   #################################################
   # CPUs
