--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -7,7 +7,6 @@
 
 %config CONFIG_DEVICE_TREE
   parent CONFIG_DEVICE
-  depend CONFIG_DRIVER_ENUM_ROOT
   desc Have all device nodes sorted in a tree
   default defined
 %config end
@@ -82,6 +81,7 @@
 
 %config CONFIG_DEVICE_ENUM
   parent CONFIG_DEVICE
+  depend CONFIG_DEVICE_TREE
   flags auto
   desc Enable enumerator device support
 %config end
