added cpu device class, moved cpu_init.c code into cpu driver, soclib use fdt from platform rom

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -73,3 +73,11 @@
   parent CONFIG_ARCH_SOCLIB
   provide CONFIG_ARCH_BOOTLOADER
 %config end
+
+%config CONFIG_ARCH_SOCLIB_FDT_ROM_ADDRESS
+  desc Specify address of flat device tree in platform memory
+  flags value
+  parent CONFIG_ARCH_SOCLIB
+  default 0xe0000000
+%config end
+
