--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -1,5 +1,5 @@
 
-objs = boot.o cpu_init.o cpu_context.o interrupts.o context_switch.o
+objs = boot.o cpu_context.o interrupts.o context_switch.o
 
 ifeq ($(CONFIG_HEXO_MMU), defined)
 objs += mmu.o
