--- a/examples/getline/config
+++ b/examples/getline/config
@@ -13,7 +13,10 @@
 %include $(SRC_DIR)/examples/common/build_options.conf
 %include $(SRC_DIR)/examples/common/platforms.conf
 
-  CONFIG_CPU_MAXCOUNT 1
+  CONFIG_CPU_MAXCOUNT 4
   CONFIG_HEXO_IRQ defined
 
-  CONFIG_ARCH_SMP undefined
+  CONFIG_ARCH_SMP defined
+
+  CONFIG_MUTEK_PRINTK_KEEP_EARLY
+
