--- a/cpu/avr/Makefile
+++ b/cpu/avr/Makefile
@@ -1,9 +1,4 @@
 
-objs =											\
-boot.o											\
-libgcc.o										\
-cpu_init.o										\
-cpu_context.o										\
-memcpy_from_code.o
+objs = boot.o libgcc.o cpu_context.o memcpy_from_code.o
 
 meta = ldscript
