--- a/cpu/lm32/Makefile
+++ b/cpu/lm32/Makefile
@@ -1,5 +1,5 @@
 
-objs = interrupt.o cpu_init.o cpu_context.o context_switch.o
+objs = interrupt.o cpu_context.o context_switch.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
 objs += boot.o
