--- a/cpu/nios2/Makefile
+++ b/cpu/nios2/Makefile
@@ -1,9 +1,5 @@
 
-objs = 											\
-interrupts.o										\
-context_switch.o									\
-cpu_init.o										\
-cpu_context.o
+objs = interrupts.o context_switch.o cpu_context.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
 objs += boot.o
