--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -102,7 +102,7 @@
 
     # Device and drivers
     CONFIG_DRIVER_SOCLIB_VCI_MULTI_TTY
-#    CONFIG_DRIVER_SOCLIB_VCI_ICU
+    CONFIG_DRIVER_SOCLIB_VCI_ICU
     CONFIG_DRIVER_SOCLIB_VCI_XICU
 #    CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE
 #    CONFIG_DRIVER_SOCLIB_VCI_TIMER
