--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -12,7 +12,7 @@
   provide CONFIG_CPU_NAME=sparcv8
   provide CONFIG_COMPILE_MCPU=v8
   provide CONFIG_CPU_RESET_ADDR=0x00000000
-#  provide CONFIG_CPU_SMP_CAPABLE
+  provide CONFIG_CPU_SMP_CAPABLE
 #  provide CONFIG_CPU_WAIT_IRQ
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
@@ -27,6 +27,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_COMPILE_MCPU=v8
   provide CONFIG_CPU_SPARC_SINGLE_IRQ_EP
+  provide CONFIG_CPU_SMP_CAPABLE
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
