updated timer driver class as described in #16, removed cpu_cycle_count, added timer driver class for cpus with timestamp counter

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -14,6 +14,7 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_NAME=armv6k
+  provide CONFIG_CPU_ARM_CYCLES_COUNTER
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
@@ -25,6 +26,7 @@
 # provide CONFIG_CPU_ARM_T_PROFILE
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_NAME=arm7tdmi
+  provide CONFIG_CPU_ARM_CYCLES_COUNTER
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
@@ -70,6 +72,12 @@
   desc Implement TLS with dedicated register in c0
   flags internal meta
   parent CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_CYCLES_COUNTER
+  desc Arm processor has a cycles counter register in c15, c12, 1
+  flags meta
+  parent CONFIG_CPU_ARM  
 %config end
 
 %config CONFIG_CPU_ARM_T_PROFILE
