some x86/ibmpc updates for new device API

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -4,6 +4,7 @@
   flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_IBMPC
+  depend CONFIG_DEVICE_CPU
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86
   provide CONFIG_CPU_ARCHNAME=x86
@@ -25,6 +26,11 @@
   parent CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
   desc Enable memory access alignement checking on x86 processors.
   desc Warning: gcc may generate non aligned accesses in memset.
+%config end
+
+%config CONFIG_CPU_X86_APIC
+  parent CONFIG_CPU_X86
+  desc Enable use of processor local APIC interrupt controller
 %config end
 
 %config CONFIG_CPU_X86_SYSENTER
