--- a/examples/common/platforms-ibmpc.conf
+++ b/examples/common/platforms-ibmpc.conf
@@ -12,8 +12,8 @@
   CONFIG_IBMPC_EARLY_CONSOLE_E9HACK
   CONFIG_MUTEK_PRINTK_KEEP_EARLY
 
-  CONFIG_DRIVER_CHAR_VGATTY
-  CONFIG_DRIVER_ICU_8259
+#  CONFIG_DRIVER_CHAR_VGATTY
+#  CONFIG_DRIVER_ICU_8259
   CONFIG_COMPILE_SOFTFLOAT undefined
 
   CONFIG_CPU_RESET_HANDLER
