added irq/processor affinity stuff, added "bypass" irq end-point type for irq fast path in irq graph

--- a/arch/gaisler/drivers/irqmp/irqmp.config
+++ b/arch/gaisler/drivers/irqmp/irqmp.config
@@ -5,6 +5,13 @@
   parent CONFIG_ARCH_GAISLER
 %config end
 
+%config CONFIG_DRIVER_GAISLER_IRQMP_BYPASS
+  desc Enforce use of interrupt bypass end-points which improves irq latency on gaisler systems
+  parent CONFIG_DRIVER_GAISLER_IRQMP
+  depend CONFIG_DEVICE_IRQ_BYPASS
+  default defined
+%config end
+
 %config CONFIG_DRIVER_GAISLER_IRQMP_EIRQ
   desc Enable support for extended interrupts
   parent CONFIG_DRIVER_GAISLER_IRQMP
