--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -18,6 +18,12 @@
   flags auto
 %config end
 
+%config CONFIG_DEVICE_IRQ_BYPASS
+  parent CONFIG_DEVICE_IRQ
+  desc Enable use of irq bypass end-point. This will improve interrupt latency on some systems.
+  flags auto
+%config end
+
 %config CONFIG_DEVICE_CPU
   parent CONFIG_DEVICE
   flags auto
