--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -13,7 +13,7 @@
   provide CONFIG_COMPILE_MCPU=v8
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_SMP_CAPABLE
-#  provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_WAIT_IRQ
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
