added dma device class and soclib vci_dma driver

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -36,6 +36,12 @@
   desc Enable character devices support
 %config end
 
+%config CONFIG_DEVICE_DMA
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable DMA devices support
+%config end
+
 %config CONFIG_DEVICE_NET
   parent CONFIG_DEVICE
   flags auto
