--- a/scripts/global.config
+++ b/scripts/global.config
@@ -77,6 +77,7 @@
   require CONFIG_HETROM_SIZE
 %config end
 
-######################################################################
-# Provided token, not definable by user directly
+%init INIT_LIBRARIES
+  desc Initialization of mutekh libraries
+%init end
 
