--- a/libc/libc.config
+++ b/libc/libc.config
@@ -5,6 +5,11 @@
   module libc C library
 %config end
 
+%init INIT_LIBC
+  during INIT_LIBRARIES
+  parent CONFIG_LIBC
+%init end
+
 %config CONFIG_LIBC_ASSERT
   desc Enable assert() support
   when CONFIG_RELEASE!
@@ -32,10 +37,28 @@
   default 256
 %config end
 
+%config CONFIG_LIBC_TIME
+  desc Enable C library time related functions.
+  depend CONFIG_DEVICE_TIMER
+  parent CONFIG_LIBC  
+%config end
+
+%init INIT_LIBC_TIME
+  during INIT_LIBC
+  parent CONFIG_LIBC_TIME
+  function libc_time_init libc_time_cleanup
+%init end
+
 %config CONFIG_LIBC_UNIXFD
   desc Enable C library Unix file descriptors based functions.
   require CONFIG_LIBC_MAX_FD
   parent CONFIG_LIBC
+%config end
+
+%init INIT_LIBC_UNIXFD
+  during INIT_LIBC
+  parent CONFIG_LIBC_UNIXFD
+  function libc_unixfd_init
 %config end
 
 %config CONFIG_LIBC_MAX_FD
