--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -54,6 +54,15 @@
   desc Enable timer devices support
 %config end
 
+%config CONFIG_DEVICE_TIMER_DEFAULT_FREQ
+  parent CONFIG_DEVICE_TIMER
+  flags value
+  desc This specifies the default timer input frequency.
+  desc This value is used as default value for time unit conversion operations
+  desc when a timer has no frequency resource entry in the device tree.
+  default 1000000
+%config end
+
 %config CONFIG_DEVICE_ICU
   parent CONFIG_DEVICE
   depend CONFIG_DEVICE_IRQ
