--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -44,6 +44,12 @@
   when CONFIG_PTHREAD
 %config end
 
+%config CONFIG_PTHREAD_COND_TIME
+  desc Enable pthread_cond_timedwait
+  parent CONFIG_PTHREAD_COND
+  depend CONFIG_LIBC_TIME
+%config end
+
 %config CONFIG_PTHREAD_BARRIER
   desc Enable pthread_barrier_* primitives
   parent CONFIG_PTHREAD
@@ -117,8 +123,3 @@
   default 1
 %config end
 
-%config CONFIG_PTHREAD_TIME
-  desc Provide support for timed primitives
-  parent CONFIG_PTHREAD
-  depend CONFIG_MUTEK_TIMER_EVENTS
-%config end
