added gaisler device ids db

--- a/arch/gaisler/Makefile
+++ b/arch/gaisler/Makefile
@@ -5,6 +5,10 @@ ifneq ($(CONFIG_GAISLER_EARLY_CONSOLE),undefined)
 objs += early_console.o
 endif
 
+ifneq ($(CONFIG_GAISLER_DEVICE_IDS),undefined)
+objs += device_ids.o
+endif
+
 ifeq ($(LINKING),1)
 meta = ldscript
 endif
