--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -35,3 +35,10 @@
   parent CONFIG_GAISLER_EARLY_CONSOLE
 %config end
 
+%config CONFIG_GAISLER_DEVICE_IDS
+  desc Provide a database of device names for display in device tree.
+  parent CONFIG_ARCH_GAISLER
+  default defined
+  warn_when CONFIG_COMPILE_OPTIMIZE=s
+%config end
+
