added gaisler GPTIMER driver

--- a/arch/gaisler/drivers/Makefile
+++ b/arch/gaisler/drivers/Makefile
@@ -15,3 +15,7 @@ ifeq ($(CONFIG_DRIVER_GAISLER_IRQMP), defined)
 subdirs += irqmp
 endif
 
+ifeq ($(CONFIG_DRIVER_GAISLER_GPTIMER), defined)
+subdirs += gptimer
+endif
+
