--- a/examples/common/platforms-gaisler.conf
+++ b/examples/common/platforms-gaisler.conf
@@ -31,6 +31,7 @@
   CONFIG_DRIVER_GAISLER_AHBCTRL
   CONFIG_DRIVER_GAISLER_APBCTRL
   CONFIG_DRIVER_GAISLER_IRQMP
+  CONFIG_DRIVER_GAISLER_GPTIMER
 
   #################################################
   # CPUs
