soclib vci_ethernet driver update

--- a/arch/soclib/drivers/vci_ethernet/ethernet.config
+++ b/arch/soclib/drivers/vci_ethernet/ethernet.config
@@ -4,6 +4,6 @@
   parent CONFIG_ARCH_SOCLIB
   depend CONFIG_DEVICE
   depend CONFIG_DEVICE_IRQ
-#  depend CONFIG_NETWORK
+  depend CONFIG_NETWORK
 %config end
 
