--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -103,7 +103,9 @@
     CONFIG_DRIVER_SOCLIB_VCI_ICU
     CONFIG_DRIVER_SOCLIB_VCI_XICU
 #    CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE
-#    CONFIG_DRIVER_SOCLIB_VCI_TIMER
+    CONFIG_DRIVER_SOCLIB_VCI_TIMER
+    CONFIG_DRIVER_ENST_RTTIMER
+    CONFIG_DRIVER_SOCLIB_VCI_ETHERNET
   %end
 
   %subsection pf-tutorial-numa
@@ -130,6 +132,8 @@
     CONFIG_DRIVER_SOCLIB_VCI_XICU
     CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE
     CONFIG_DRIVER_SOCLIB_VCI_TIMER
+    CONFIG_DRIVER_ENST_RTTIMER
+    CONFIG_DRIVER_SOCLIB_VCI_ETHERNET
   %end
 
   # Heterogeneous SoCLib platform
